Bug 321021: Add option to preserve exceptions thrown from outermost frames, rather than convert to error reports.  r=mrbkap, sr=brendan.